give tudebot access to gibu apis

--- a/production/docker-compose-tude.yml
+++ b/production/docker-compose-tude.yml
@@ -11,6 +11,7 @@ services:
     networks:
       - logging
       - metrics
+      - gibu
     secrets:
       - TUDEBOT_DBOT_TOKEN
       - TUDEBOT_DBOT_ID
@@ -34,6 +35,8 @@ networks:
   logging:
     external: true
   metrics:
+    external: true
+  gibu:
     external: true
 
 secrets:
