--- a/production/docker-compose-deployman.yml
+++ b/production/docker-compose-deployman.yml
@@ -5,8 +5,12 @@ services:
     image: ghcr.io/maanex/deployman:master
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /root/services/deployman:/data
     environment:
       - DEPLOYMAN_PORT=3089
+      - DEPLOYMAN_DISCORD_CLIENT_ID="961357255817707540"
+      - DEPLOYMAN_DISCORD_PUBIC_KEY="d0a4ab69ac4248100d932139d984e68e6cacb694a5c57b83a4835ee71691176c"
+      - DEPLOYMAN_PRODUCT_CONFIG_PATH="/data/productconfig.yaml"
     networks:
       - gibu
     ports:
