--- a/production/docker-compose-deployman.yml
+++ b/production/docker-compose-deployman.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 
 services:
-  api_games:
+  deployman:
     image: ghcr.io/maanex/deployman:master
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
