--- a/production/docker-compose-deployman.yml
+++ b/production/docker-compose-deployman.yml
@@ -8,9 +8,9 @@ services:
       - /root/services/deployman:/data
     environment:
       - DEPLOYMAN_PORT=3089
-      - DEPLOYMAN_DISCORD_CLIENT_ID="961357255817707540"
-      - DEPLOYMAN_DISCORD_PUBIC_KEY="d0a4ab69ac4248100d932139d984e68e6cacb694a5c57b83a4835ee71691176c"
-      - DEPLOYMAN_PRODUCT_CONFIG_PATH="/data/productconfig.yaml"
+      - DEPLOYMAN_DISCORD_CLIENT_ID=961357255817707540
+      - DEPLOYMAN_DISCORD_PUBIC_KEY=d0a4ab69ac4248100d932139d984e68e6cacb694a5c57b83a4835ee71691176c
+      - DEPLOYMAN_PRODUCT_CONFIG_PATH=/data/productconfig.yaml
     ports:
       - 3089:3089
     secrets:
