--- a/production/docker-compose-swarmpit.yml
+++ b/production/docker-compose-swarmpit.yml
@@ -34,7 +34,7 @@ services:
         - traefik.docker.network=traefik-public
         - traefik.http.services.swarmpit.loadbalancer.server.port=8080
         - traefik.http.routers.swarmpit.entrypoints=https
-        - traefik.http.routers.swarmpit.rule=Host(`cluster.infra.maanex.me`)
+        - traefik.http.routers.swarmpit.rule=Host(`cluster-net.maanex.me`)
         - traefik.http.routers.swarmpit.tls.certresolver=letsencrypt
 
   db:
