--- a/production/docker-compose-infra.yml
+++ b/production/docker-compose-infra.yml
@@ -11,7 +11,8 @@ services:
       - --providers.docker.exposedbydefault=false
       - --entrypoints.metrics.address=:8082
       - --entrypoints.http.address=:80
-      - --entrypoints.https.address=:443
+      # - --entrypoints.https.address=:443
+      - --entrypoints.https.address=:4400
       #* for cloudflare proxy
       - --entrypoints.https.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22
       - --certificatesresolvers.letsencrypt.acme.email=team@freestuffbot.xyz
@@ -25,7 +26,8 @@ services:
       - traefik-public
     ports:
       - 80:80     # web main
-      - 443:443     # https
+      # - 443:443     # https
+      - 4400:4400     # https
       - 8082:8082 # traefik metrics
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
