--- a/production/traefik/traefik.yaml
+++ b/production/traefik/traefik.yaml
@@ -1,26 +1,12 @@
 global:
   checkNewVersion: true
-  sendAnonymousUsage: false  # true by default
+  sendAnonymousUsage: false
 
-# (Optional) Log information
-# ---
-# log:
-#  level: ERROR  # DEBUG, INFO, WARNING, ERROR, CRITICAL
-#   format: common  # common, json, logfmt
-#   filePath: /var/log/traefik/traefik.log
-
-# (Optional) Accesslog
-# ---
-# accesslog:
-  # format: common  # common, json, logfmt
-  # filePath: /var/log/traefik/access.log
-
-# (Optional) Enable API and Dashboard
 # ---
 api:
  debug: true
- dashboard: true  # true by default
- insecure: false  # Don't do this in production!
+ dashboard: true
+ insecure: false
 
 serversTransport:
   insecureSkipVerify: true
@@ -34,16 +20,18 @@ entryPoints:
         entryPoint:
           to: websecure
           scheme: https
-
   websecure:
-    address: ":443"
+    # address: ":443"
+    address: ":2053"
+  metrics:
+    address: ":8082"
 
 # SSL Certificates
 certificatesResolvers:
   cloudflare:
     acme:
-      email: neosigfood@gmail.com
-      storage: acme.json
+      email: team@freestuffbot.xyz
+      storage: /certificates/acme.json
       dnsChallenge:
         provider: cloudflare
         resolvers:
@@ -64,8 +52,10 @@ certificatesResolvers:
 
 providers:
   docker:
-    exposedByDefault: false  # Default is true
-#  file:
-#    # watch for dynamic configuration changes
-#    file: /config.yml
-#    watch: true
+    swarmMode: true
+    exposedByDefault: false
+
+# metrics
+metrics:
+  prometheus:
+    entryPoint=metrics
