--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -46,7 +46,7 @@ services:
       restart_policy:
         condition: always
       labels:
-        traefik.enable: true
+        traefik.enable: "true"
         traefik.docker.network: proxy
         # traefik.http.services.traefik-api.loadbalancer.server.port: 8080
         traefik.http.routers.traefik-api.rule: Host(`traefik-net.maanex.me`)
@@ -66,7 +66,7 @@ services:
     networks:
        - proxy
     labels:
-      traefik.enable: true
+      traefik.enable: "true"
       traefik.docker.network: proxy
       traefik.http.routers.whoami.rule: Host(`whoami.mensatt.de`)
       traefik.http.routers.whoami.tls.certresolver: cloudflare
