--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -52,6 +52,7 @@ services:
         traefik.http.routers.traefik-api.rule: Host(`traefik-net.maanex.me`)
         # traefik.http.routers.traefik-api.entrypoints: https
         traefik.http.routers.traefik-api.service: api@internal
+        traefik.http.routers.traefik-api.tls: "true"
         # traefik.http.routers.traefik-api.tls.certresolver: letsencrypt
         traefik.http.routers.traefik-api.tls.certresolver: cloudflare
         traefik.http.routers.traefik-api.tls.domains[0].main: traefik-net.maanex.me
@@ -69,6 +70,7 @@ services:
       traefik.enable: "true"
       traefik.docker.network: proxy
       traefik.http.routers.whoami.rule: Host(`whoami.mensatt.de`)
+      traefik.http.routers.whoami.tls: "true"
       traefik.http.routers.whoami.tls.certresolver: cloudflare
       traefik.http.routers.whoami.tls.domains[0].main: whoami.mensatt.de
 
