--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -3,7 +3,7 @@ version: "3.3"
 services:
   traefik:
     image: traefik:2.6
-    command:
+    # command:
       # - --api.insecure
       # - --api.dashboard
       # - --providers.docker=true
