--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -27,7 +27,7 @@ services:
       - 8082:8082 # traefik metrics
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./data/traefik.yml:/traefik.yml:ro
+      - ./traefik/traefik.yml:/traefik.yml:ro
       - traefik-public-certificates:/certificates
     secrets:
       - CF_DNS_API_TOKEN
