--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -48,8 +48,8 @@ services:
         traefik.docker.network: proxy
         traefik.http.services.traefik-api.loadbalancer.server.port: 8080
         traefik.http.routers.traefik-api.service: api@internal
+        traefik.http.routers.traefik-api.entrypoints: https
         traefik.http.routers.traefik-api.rule: Host(`traefik-net.maanex.me`)
-        # traefik.http.routers.traefik-api.entrypoints: https
         traefik.http.routers.traefik-api.tls: "true"
         traefik.http.routers.traefik-api.tls.certresolver: cloudflare
         traefik.http.routers.traefik-api.tls.domains[0].main: traefik-net.maanex.me
@@ -66,6 +66,8 @@ services:
     labels:
       traefik.enable: "true"
       traefik.docker.network: proxy
+      traefik.http.routers.whoami.service: whoami
+      traefik.http.routers.whoami.entrypoints: https
       traefik.http.routers.whoami.rule: Host(`whoami-net.maanex.me`)
       traefik.http.routers.whoami.tls: "true"
       traefik.http.routers.whoami.tls.certresolver: cloudflare
