--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -66,7 +66,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.docker.network: proxy
-      traefik.http.routers.whoami.service: whoami
+      # traefik.http.services.whoami.loadbalancer.server.port: 80
       traefik.http.routers.whoami.entrypoints: https
       traefik.http.routers.whoami.rule: Host(`whoami-net.maanex.me`)
       traefik.http.routers.whoami.tls: "true"
