--- a/production/dc-swarmpit.yaml
+++ b/production/dc-swarmpit.yaml
@@ -29,13 +29,14 @@ services:
       placement:
         constraints:
           - node.role == manager
-      # labels:
-      #   - traefik.enable=true
-      #   - traefik.docker.network=proxy
-      #   - traefik.http.services.swarmpit.loadbalancer.server.port=8080
-      #   - traefik.http.routers.swarmpit.entrypoints=https
-      #   - traefik.http.routers.swarmpit.rule=Host(`cluster-net.maanex.me`)
-      #   - traefik.http.routers.swarmpit.tls.certresolver=letsencrypt
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=proxy
+        - traefik.http.services.swarmpit.loadbalancer.server.port=8080
+        - traefik.http.routers.swarmpit.entrypoints=https
+        - traefik.http.routers.swarmpit.rule=Host(`cluster-net.maanex.me`)
+        - traefik.http.routers.swarmpit.tls.certresolver=cloudflare
+        - traefik.http.routers.swarmpit.tls.domains[0].main=cluster-net.maanex.me
 
   db:
     image: couchdb:2.3.0
