--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -60,6 +60,8 @@ services:
   whoami:
     image: traefik/whoami
     restart: always
+    ports:
+      - 80:80
     networks:
       - proxy
     labels:
