--- a/production/dc-traefik.yaml
+++ b/production/dc-traefik.yaml
@@ -62,14 +62,19 @@ services:
     restart: always
     networks:
       - proxy
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=proxy
-      - traefik.http.services.whoami.loadbalancer.server.port=80
-      - traefik.http.routers.whoami.entrypoints=https
-      - traefik.http.routers.whoami.rule=Host(`whoami-net.maanex.me`)
-      - traefik.http.routers.whoami.tls.certresolver=cloudflare
-      - traefik.http.routers.whoami.tls.domains[0].main=whoami-net.maanex.me
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.role == manager
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=proxy
+        - traefik.http.services.whoami.loadbalancer.server.port=80
+        - traefik.http.routers.whoami.entrypoints=https
+        - traefik.http.routers.whoami.rule=Host(`whoami-net.maanex.me`)
+        - traefik.http.routers.whoami.tls.certresolver=cloudflare
+        - traefik.http.routers.whoami.tls.domains[0].main=whoami-net.maanex.me
 
 
 networks:
