--- a/production/dc-fsb-api.yaml
+++ b/production/dc-fsb-api.yaml
@@ -33,11 +33,11 @@ services:
         - prometheus-job=fsb
         - traefik.enable=true
         - traefik.docker.network=proxy
-        - traefik.http.services.whoami.loadbalancer.server.port=80
-        - traefik.http.routers.whoami.entrypoints=https
-        - traefik.http.routers.whoami.rule=Host(`api.freestuffbot.xyz`)
-        - traefik.http.routers.whoami.tls.certresolver=cloudflare
-        - traefik.http.routers.whoami.tls.domains[0].main=api.freestuffbot.xyz
+        - traefik.http.services.fsb-api.loadbalancer.server.port=80
+        - traefik.http.routers.fsb-api.entrypoints=https
+        - traefik.http.routers.fsb-api.rule=Host(`api.freestuffbot.xyz`)
+        - traefik.http.routers.fsb-api.tls.certresolver=cloudflare
+        - traefik.http.routers.fsb-api.tls.domains[0].main=api.freestuffbot.xyz
 
 networks:
   redis:
