--- a/production/dc-fsb-api.yaml
+++ b/production/dc-fsb-api.yaml
@@ -8,8 +8,10 @@ services:
       FSB_API_PORT: "80"
       FSB_API_REDIS_URL: "redis://infra_redis"
       FSB_API_RABBIT_URL: "amqp://infra_rabbit"
-      FSB_API_DASH_CORS_ORIGIN: "https://dashboard.freestuffbot.xyz"
-      FSB_API_DASH_OAUTH_CALLBACK_URL: "https://dashboard.freestuffbot.xyz/oauth/callback"
+      FSB_API_DASH_CORS_ORIGIN: "https://deploy-preview-2--freestuffdash.netlify.app"
+      FSB_API_DASH_OAUTH_CALLBACK_URL: "https://deploy-preview-2--freestuffdash.netlify.app/oauth/callback"
+      # FSB_API_DASH_CORS_ORIGIN: "https://dashboard.freestuffbot.xyz"
+      # FSB_API_DASH_OAUTH_CALLBACK_URL: "https://dashboard.freestuffbot.xyz/oauth/callback"
       FSB_NETWORK_GIBU_GQL_ENDPOINT: "http://gibu_api_games/graphql"
       FSB_NETWORK_THUMBNAILER: "http://thumbnailer"
       FSB_NETWORK_LINK_PROXY: "http://link_proxy"
