--- a/production/dc-monitoring.yaml
+++ b/production/dc-monitoring.yaml
@@ -17,12 +17,6 @@ services:
       placement:
         constraints:
         - node.role == manager
-      # labels:
-        # - traefik.enable=true
-        # - traefik.docker.network=traefik-public
-        # - traefik.http.routers.prometheus.entrypoints=http
-        # - traefik.http.routers.prometheus.rule=Host(`red.localhost`)
-        # - traefik.http.services.prometheus.loadbalancer.server.port=9090
 
   grafana:
     image: grafana/grafana
@@ -36,19 +30,20 @@ services:
     networks:
       - proxy
       - metrics
-    ports:
-      - 9919:3000
+    # ports:
+    #   - 9919:3000
     deploy:
       placement:
         constraints:
           - node.role == manager
-      # labels:
-      #   - traefik.enable=true
-      #   - traefik.docker.network=traefik-public
-      #   - traefik.http.services.grafana.loadbalancer.server.port=3000
-      #   - traefik.http.routers.grafana.entrypoints=https
-      #   - traefik.http.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
-      #   - traefik.http.routers.grafana.tls.certresolver=letsencrypt
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=proxy
+        - traefik.http.services.grafana.loadbalancer.server.port=3000
+        - traefik.http.routers.grafana.entrypoints=https
+        - traefik.http.routers.grafana.rule=Host(`monitoring.freestuffbot.xyz`)
+        - traefik.http.routers.grafana.tls.certresolver=cloudflare
+        - traefik.http.routers.grafana.tls.domains[0].main=monitoring.freestuffbot.xyz
 
 
 networks:
