--- a/production/dc-personal.yaml
+++ b/production/dc-personal.yaml
@@ -8,8 +8,8 @@ services:
       - GREENLIGHT_DBOT_ID
       - GREENLIGHT_DBOT_PUBKEY
       - GREENLIGHT_MONGO_URL
-    ports:
-      - 5008:80
+    networks:
+      - proxy
     deploy:
       placement:
         constraints:
@@ -17,27 +17,17 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
-
-  # wumpum:
-  #   image: ghcr.io/maanex/wumpum:master
-  #   environment:
-  #     WUMPUM_TRACK_INDIVIDUAL: "true"
-  #   networks:
-  #     - metrics
-  #   secrets:
-  #     - WUMPUM_DBOT_TOKEN
-  #   deploy:
-  #     placement:
-  #       constraints:
-  #         - node.role == manager
-  #     labels:
-  #       - prometheus-job=wumpum
-  #     update_config:
-  #       parallelism: 1
-  #       delay: 10s
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=proxy
+        - traefik.http.services.greenlight.loadbalancer.server.port=80
+        - traefik.http.routers.greenlight.entrypoints=https
+        - traefik.http.routers.greenlight.rule=Host(`greenlight.maanex.me`)
+        - traefik.http.routers.greenlight.tls.certresolver=cloudflare
+        - traefik.http.routers.greenlight.tls.domains[0].main=greenlight.maanex.me
 
 networks:
-  metrics:
+  proxy:
     external: true
 
 secrets:
