--- a/production/dc-swarmpit.yaml
+++ b/production/dc-swarmpit.yaml
@@ -34,9 +34,9 @@ services:
         - traefik.docker.network=proxy
         - traefik.http.services.swarmpit.loadbalancer.server.port=8080
         - traefik.http.routers.swarmpit.entrypoints=https
-        - traefik.http.routers.swarmpit.rule=Host(`cluster-net.maanex.me`)
+        - traefik.http.routers.swarmpit.rule=Host(`cluster-coyote.tude.network`)
         - traefik.http.routers.swarmpit.tls.certresolver=cloudflare
-        - traefik.http.routers.swarmpit.tls.domains[0].main=cluster-net.maanex.me
+        - traefik.http.routers.swarmpit.tls.domains[0].main=cluster-coyote.tude.network
 
   db:
     image: couchdb:2.3.0
