--- a/production/dc-monitoring.yaml
+++ b/production/dc-monitoring.yaml
@@ -13,6 +13,9 @@ services:
       - '--storage.tsdb.path=/prometheus'
     networks:
       - metrics
+    environment:
+      PUID: 1002
+      PGID: 1002
     deploy:
       placement:
         constraints:
