--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -87,11 +87,8 @@ services:
       - FSB_DISCORD_INTERACTIONS_MONGO_URL
       - FSB_DISCORD_INTERACTIONS_FREESTUFF_API_KEY
     deploy:
-      mode: global
-      placement:
-        constraints:
-          # - node.hostname != coyote # reserve coyote ip address for discord_gateway service
-          - node.hostname == coyote # reserve coyote ip address for discord_gateway service
+      mode: replicated
+      replicas: 1
       update_config:
         parallelism: 1
         delay: 30s
@@ -104,6 +101,29 @@ services:
         - traefik.http.routers.fsb-discord-interactions.rule=Host(`inbound-discord--net.freestuffbot.xyz`)
         - traefik.http.routers.fsb-discord-interactions.tls.certresolver=cloudflare
         - traefik.http.routers.fsb-discord-interactions.tls.domains[0].main=inbound-discord--net.freestuffbot.xyz
+
+  discord_gateway:
+    image: ghcr.io/freestuffbot/fsb-discord-gateway:master
+    environment:
+      NODE_ENV: "production"
+      FSB_DISCORD_GATEWAY_PORT: "80"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
+    networks:
+      - metrics
+      - fsn_discord
+    secrets:
+      - FSB_DISCORD_GATEWAY_API_TOKEN
+      - FSB_DISCORD_GATEWAY_API_USER
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.hostname == coyote
+      update_config:
+        parallelism: 1
+        delay: 30s
+      labels:
+        - prometheus-job=fsb
 
 networks:
   # access to "external" services
@@ -144,4 +164,9 @@ secrets:
   FSB_DISCORD_INTERACTIONS_MONGO_URL:
     external: true
   FSB_DISCORD_INTERACTIONS_FREESTUFF_API_KEY:
+    external: true
+  # DISCORD GATEWAY
+  FSB_DISCORD_GATEWAY_API_TOKEN:
+    external: true
+  FSB_DISCORD_GATEWAY_API_USER:
     external: true
