--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -101,7 +101,7 @@ services:
         parallelism: 1
         delay: 30s
       labels:
-        - xyz.freestuffbot.service.role=discord_interactions
+        - xyz.freestuffbot.service.role=discord-interactions
         - prometheus-job=fsb
         - traefik.enable=true
         - traefik.docker.network=proxy
@@ -133,7 +133,7 @@ services:
         parallelism: 1
         delay: 30s
       labels:
-        - xyz.freestuffbot.service.role=discord_gateway
+        - xyz.freestuffbot.service.role=discord-gateway
         - prometheus-job=fsb
 
   discord_publisher:
@@ -158,7 +158,7 @@ services:
         parallelism: 1
         delay: 30s
       labels:
-        - xyz.freestuffbot.service.role=discord_publisher
+        - xyz.freestuffbot.service.role=discord-publisher
         - prometheus-job=fsb
 
   thumbnailer:
@@ -201,7 +201,7 @@ services:
         parallelism: 1
         delay: 30s
       labels:
-        - xyz.freestuffbot.service.role=link_proxy
+        - xyz.freestuffbot.service.role=link-proxy
         - prometheus-job=fsb
 
 networks:
