--- a/production/prometheus/prometheus.yml
+++ b/production/prometheus/prometheus.yml
@@ -5,7 +5,8 @@ global:
 
 # ref https://prometheus.io/docs/guides/dockerswarm/
 scrape_configs:
-  - job_name: 'dockerswarm'
+  - job_name: swarm_generic
+    metrics_path: /metrics
     dockerswarm_sd_configs:
       - host: unix:///var/run/docker.sock
         role: tasks
@@ -17,6 +18,28 @@ scrape_configs:
         regex: metrics
         action: keep
       - source_labels: [__meta_dockerswarm_service_label_prometheus_job]
+        regex: .+
+        action: keep
+      - source_labels: [__meta_dockerswarm_service_label_xyz_freestuffbot_service_role]
+        regex: .+
+        action: drop
+
+  - job_name: swarm_fsbumi
+    metrics_path: /umi/metrics
+    dockerswarm_sd_configs:
+      - host: unix:///var/run/docker.sock
+        role: tasks
+    relabel_configs:
+      - source_labels: [__meta_dockerswarm_task_desired_state]
+        regex: running
+        action: keep
+      - source_labels: [__meta_dockerswarm_network_name]
+        regex: metrics
+        action: keep
+      - source_labels: [__meta_dockerswarm_service_label_prometheus_job]
+        regex: .+
+        action: keep
+      - source_labels: [__meta_dockerswarm_service_label_xyz_freestuffbot_service_role]
         regex: .+
         action: keep
       # # Renmoved because I decided I don't care.
