--- a/production/dc-infra.yaml
+++ b/production/dc-infra.yaml
@@ -14,6 +14,9 @@ services:
 
   rabbit:
     image: rabbitmq:3.8
+    hostname: rabbit
+    dns:
+      hostname: rabbit
     networks:
       - rabbits
     deploy:
