--- a/production/dc-monitoring.yaml
+++ b/production/dc-monitoring.yaml
@@ -21,11 +21,11 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=proxy
-        - traefik.http.services.grafana.loadbalancer.server.port=9090
-        - traefik.http.routers.grafana.entrypoints=https
-        - traefik.http.routers.grafana.rule=Host(`debug-a1.tude.network`)
-        - traefik.http.routers.grafana.tls.certresolver=cloudflare
-        - traefik.http.routers.grafana.tls.domains[0].main=debug-a1.tude.network
+        - traefik.http.services.prom.loadbalancer.server.port=9090
+        - traefik.http.routers.prom.entrypoints=https
+        - traefik.http.routers.prom.rule=Host(`debug-a1.tude.network`)
+        - traefik.http.routers.prom.tls.certresolver=cloudflare
+        - traefik.http.routers.prom.tls.domains[0].main=debug-a1.tude.network
 
   grafana:
     image: grafana/grafana
